add wrk2 for load simulation to quarkus13_2x branch
Signed-off-by: kusumachalasani <kchalasa@redhat.com>